<resources>
    <string name="app_name">Trivia Game</string>
    <string name="trivia">Trivia</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="to">TODO</string>
    <string name="todo">TODO</string>
    <string name="counter">0 out of 100</string>
    <string name="content">content</string>
    <string name="textview">Score : 0</string>
    <string name="start_over">Start Over!</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>
